--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       const path = window.location.pathname.split('/').slice(1 + segment).join('/');
       window.location.href = window.location.origin 
         + (segment ? '/' + window.location.pathname.split('/')[1] : '') 
-        + '/#' + path;
+        + '/' + path;
     </script>
   </head>
   <body>
